<resources>
    <string name="app_name">UTE</string>
    <string name="logging">Logging...</string>
    <string name="action_settings">Settings</string>
    <string name="give_login">Username</string>
    <string name="password">Password</string>
    <string name="login_screen_password_hint">Your password</string>
    <string name="login_screen_hint_username">Your username</string>
    <string name="login_button">Log In</string>
    <string name="login_as_guest">Login as guest.</string>
    <string name="Login_To_Account">Login to your account</string>
    <string name="register">Register</string>
    <string name="type_username">Type in your username</string>
    <string name="connectionToDBFailed">Connection to the database failed</string>
    <string name="sortBy">Sort by</string>
    <string name="distance">Distance ▼</string>
    <string name="time">Time ▼</string>
    <string name="calories">Calories ▼</string>
    <string name="mytrails">My Trails</string>
    <string name="backToMap">Back to Map</string>
    <string name="time_space_000000">Time: 00:00:00</string>
    <string name="pleaseProvideNameForYourTrail">Please provide name for your trail</string>
    <string name="name">Name</string>
    <string name="find_veturilo">Find closest Veturilo station</string>
    <string name="find_metro">Find closest metro entrance</string>
    <string name="browseTrails">Browse trails</string>
    <string name="yourMailAdress">Your email address</string>
    <string name="repeatYourPassword">Repeat your password</string>
    <string name="avgSpeed">Avg Speed</string>
    <string name="calories0">Calories 0</string>
    <string name="unavailable">Unavailable</string>
    <string name="MapActivitySpeed">Speed: 0.00 km/h</string>
    <string name="MapActivityDistance">Dist. 0.00 km</string>
    <string name="mytrailsbutton">My Trails</string>
    <string name="distanceSpace">"Distance:   "</string>
    <string name="SpeedSpace">"Speed:   "</string>
    <string name="caloriesSpace">"Calories: "</string>
    <string name="locationServicesSuspended">Location services suspended</string>
    <string name="caloriesburned">"Calories burned: "</string>
    <string name="timeSpace">"Duration: "</string>
    <string name="avgspeedSpace">"Avg Speed: "</string>
</resources>
