<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/loginscreen_layout"
    android:background="#437ae8"
    android:gravity="center_horizontal">

    <ImageView
        android:layout_gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:layout_width="150dp"
        android:layout_height="170dp"
        android:src="@drawable/mountain_bike_icon"
        android:id="@+id/imageView"
        />

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".MyActivity"
    android:gravity="center_vertical"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true">



    <TextView
        android:layout_marginTop="150dp"
        android:textColor="#FFFFFF"
        android:layout_gravity="left"
        android:paddingLeft="20dp"
        android:text="@string/give_login"
        android:layout_width="wrap_content"
        android:textSize="@dimen/loginScreenFontSize"
        android:layout_height="40dp"
        android:textStyle="bold"

        />

    <EditText
        android:id="@+id/usernameEditText"
        android:textColor="#000000"
        android:layout_gravity="left"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:singleLine="true"
        android:scrollHorizontally="true"
        android:background="#FFFFFF"
        android:hint="@string/login_screen_hint_username"
        android:focusable="true"
        android:layout_marginTop="15dp"
        android:text="test"
        />


    <TextView
        android:textColor="#FFFFFF"
        android:paddingLeft="20dp"
        android:paddingTop="20dp"
        android:layout_gravity="left"
        android:text="@string/password"
        android:textSize="@dimen/loginScreenFontSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/passwordEditText"
        android:background="#FFFFFF"
        android:textColor="#000000"
        android:layout_gravity="left"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:singleLine="true"
        android:scrollHorizontally="true"
        android:hint="@string/login_screen_password_hint"
        android:inputType="textPassword"
        android:layout_marginTop="15dp"
        android:text="test"
        />

    <Button
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/login_button"
        android:textSize="@dimen/loginScreenFontSize"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:onClick="login"
        android:background="@drawable/log_in_button_background"
        android:id="@+id/logInButton"
        />


</LinearLayout>

</RelativeLayout>
