<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"


    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/mytrails"
        android:layout_weight="10"
        android:background="#000000"
        android:textStyle="normal"
        android:textSize="30sp"
        android:textColor="#FFFFFF"
        android:gravity="center"


        />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="75"
        android:id="@+id/mytrailsListview"
        android:clickable="true"

        >



    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="10"
        >

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/backToMap"
            android:layout_weight="1"
            android:background="#abcdef"
            android:id="@+id/backToMap"
            android:onClick="backToMap"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/browseTrails"
            android:layout_weight="1"
            android:background="#abcdef"
            android:id="@+id/mytrails_to_browsetrails_button"
            android:onClick="gotoBrowseTrails"/>

    </LinearLayout>


</LinearLayout>