<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/registerscreen_layout"
    android:background="#437ae8"
    android:gravity="center_horizontal">



    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        tools:context=".MyActivity"
        android:gravity="center_vertical"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <ImageView
            android:layout_gravity="center_horizontal"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:layout_width="150dp"
            android:layout_height="170dp"
            android:src="@drawable/mountain_bike_icon"
            android:id="@+id/imageView"
            />

        <TextView
            android:layout_marginTop="35dp"
            android:textColor="#FFFFFF"
            android:layout_gravity="left"
            android:paddingLeft="20dp"
            android:text="@string/type_username"
            android:layout_width="wrap_content"
            android:textSize="@dimen/loginScreenFontSize"
            android:layout_height="40dp"
            android:textStyle="bold"

            />

        <EditText
            android:id="@+id/registerUsernameEditText"
            android:textColor="#000000"
            android:layout_gravity="left"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:singleLine="true"
            android:scrollHorizontally="true"
            android:background="#FFFFFF"
            android:hint="@string/login_screen_hint_username"
            android:focusable="true"
            android:layout_marginTop="15dp"


            />


        <TextView
            android:textColor="#FFFFFF"
            android:paddingLeft="20dp"
            android:paddingTop="20dp"
            android:layout_gravity="left"
            android:text="@string/password"
            android:textSize="@dimen/loginScreenFontSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/registerPasswordEditText"
            android:background="#FFFFFF"
            android:textColor="#000000"
            android:layout_gravity="left"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:singleLine="true"
            android:scrollHorizontally="true"
            android:hint="@string/login_screen_password_hint"
            android:inputType="textPassword"
            android:layout_marginTop="15dp"


            />

        <TextView
            android:textColor="#FFFFFF"
            android:paddingLeft="20dp"
            android:paddingTop="20dp"
            android:layout_gravity="left"
            android:text="@string/repeatYourPassword"
            android:textSize="@dimen/loginScreenFontSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/registerRepeatPasswordEditText"
            android:background="#FFFFFF"
            android:textColor="#000000"
            android:layout_gravity="left"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:singleLine="true"
            android:scrollHorizontally="true"
            android:hint="@string/login_screen_password_hint"
            android:inputType="textPassword"
            android:layout_marginTop="15dp"


            />


        <TextView
            android:textColor="#FFFFFF"
            android:paddingLeft="20dp"
            android:paddingTop="20dp"
            android:layout_gravity="left"
            android:text="@string/yourMailAdress"
            android:textSize="@dimen/loginScreenFontSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/registerEmailEditText"
            android:background="#FFFFFF"
            android:textColor="#000000"
            android:layout_gravity="left"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:singleLine="true"
            android:scrollHorizontally="true"
            android:hint="@string/yourMailAdress"
            android:layout_marginTop="15dp"


            />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="@dimen/loginScreenFontSize"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:onClick="registerClick"
            android:background="@drawable/log_in_button_background"
            android:id="@+id/registerButton"
            />


    </LinearLayout>

</RelativeLayout>
</ScrollView>